# snap-l10n

./: CHANGELOG.md  README.md  po4a.cfg  pyproject.toml  snap-l10n_0.1.0-1_all.deb  snap-l10n_0.2.1_all.deb
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/snap-l10n_0.2.1_all/DEBIAN/: control
build-new/snap-l10n_0.2.1_all/usr/lib/python3/dist-packages/snap_l10n/: __init__.py  snapd.py
data/: se.danielnylander.snap-l10n.desktop  se.danielnylander.snap-l10n.desktop.in
data/man/: snap-l10n.1
debian/: control
po/: README.md  snap-l10n.pot  sv.mo  sv.po
po/locale/sv/LC_MESSAGES/: snap-l10n.mo
po/man/: snap-l10n.1.pot  sv.po
po/sv/LC_MESSAGES/: snap-l10n.mo
rpm-build/snap-l10n_0.2.1/usr/share/locale/sv/LC_MESSAGES/: snap-l10n.mo
src/snap_l10n/: __init__.py  main.py  snapd.py
