[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-l10n"
version = "0.2.2"
description = "View snap package translation status"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
keywords = ["snap", "l10n", "translation", "gtk4"]
dependencies = ["PyGObject>=3.42"]

[project.scripts]
snap-l10n = "snap_l10n.main:main"

[project.urls]
Homepage = "https://github.com/yeager/snap-l10n"

[tool.setuptools.packages.find]
where = ["src"]
